Row identity, grid deletion, tenant-scoped reads and per-mode query options
Several changes that turned out to be inseparable: they interleave in
WeaviateCollection, WeaviateQuerySpec and WeaviateQueryPanel, and splitting the
hunks apart would have produced commits that do not build.

Row identity. Objects are identified by their server-assigned uuid, which is
not a declared property, so the collection had no key and the grid could not
say which row was which. It is now a real attribute with a primary key over it.
A ROWID pseudo-attribute would have been the other option, and was tried first,
but DBDAttributeConstraint#isVisibleByDefault hides pseudo-attributes, which
took the uuid column out of the data view.

Deletion. WeaviateCollection implements DBSDataManipulator for delete only, and
the batch issues one deleteMany rather than a request per row. Insert, update
and truncate refuse with a clear message; cell editing stays off because
getAttributeReadOnlyStatus requires the data.update feature, which is not
advertised. isReadOnlyData had to become false for any of this to be reachable
-- it short-circuits every edit action before the manipulator is consulted.

Tenants. A multi-tenant collection has no "all tenants" view, so reads, counts
and deletes go through one tenant-scoped handle; a handle built without the
tenant silently matches nothing. The read path asks which tenant to use when
none is chosen, and refuses to delete rather than reporting a cheerful zero.

Query options. Near Object joins the existing modes, taking a reference object
id rather than a vector. Each mode now declares whether it reports a score, a
distance, an explanation, and whether autocut applies, so a plain fetch no
longer shows columns that are always empty. Autocut lives in each ranked mode's
own panel. Hybrid's alpha is a slider between its two named extremes.

Vectors are no longer returned to the grid by default -- an embedding is
hundreds of columns wide -- while an export still ho